--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "typescript": "^4.7.4"
   },
   "dependencies": {
-    "discord.js": "^14.2.0"
+    "@discordjs/rest": "^1.0.1",
+    "discord.js": "^14.2.0",
+    "dotenv": "^16.0.1"
   }
 }
