--- a/package.json
+++ b/package.json
@@ -20,8 +20,11 @@
     "typescript": "^4.7.4"
   },
   "dependencies": {
+    "@discordjs/opus": "^0.8.0",
     "@discordjs/rest": "^1.0.1",
+    "discord-player": "^5.3.1",
     "discord.js": "^14.2.0",
-    "dotenv": "^16.0.1"
+    "dotenv": "^16.0.1",
+    "ytdl-core": "4.10.0"
   }
 }
