--- a/package.json
+++ b/package.json
@@ -20,11 +20,15 @@
     "typescript": "^4.7.4"
   },
   "dependencies": {
-    "@discordjs/opus": "^0.8.0",
+    "@discordjs/opus": "^0.9.0",
     "@discordjs/rest": "^1.0.1",
-    "discord-player": "^5.3.1",
-    "discord.js": "^14.2.0",
+    "discord-music-player": "^9.1.1",
+    "discord-player": "^5.3.2",
+    "discord.js": "^14.7.1",
     "dotenv": "^16.0.1",
-    "ytdl-core": "4.10.0"
+    "play-dl": "^1.9.6",
+    "soundcloud-scraper": "^5.0.3",
+    "youtube-sr": "^4.3.4",
+    "ytdl-core": "^4.11.0"
   }
 }
