--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
   "dependencies": {
     "@discordjs/opus": "^0.9.0",
     "@discordjs/rest": "^1.0.1",
+    "chatgpt": "^2.0.7",
     "discord-music-player": "^9.1.1",
     "discord-player": "^5.3.2",
     "discord.js": "^14.7.1",
     "dotenv": "^16.0.1",
+    "openai": "^3.1.0",
     "play-dl": "^1.9.6",
     "soundcloud-scraper": "^5.0.3",
     "youtube-sr": "^4.3.4",
